objects/X7S_Event_Material__c/X7S_Event_Material__c.object-meta.xml
<CustomObject>
    <description>Object to support Event Materials records as part of the Events accelerator from 7Summits.</description>
    <label>7S Event Material</label>
    <nameField>
        <label>7S Event Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Event Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>