objects/X7S_Event_Material__c/fields/Applicability__c.field-meta.xml
<CustomField>
    <fullName>Applicability__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <label>Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Hybrid: In-Person</fullName>
            </value>
            <value>
                <fullName>Hybrid: Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>