objects/X7S_Event_Material__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>X7S_Event__c</referenceTo>
    <relationshipLabel>7S Event Materials</relationshipLabel>
    <relationshipName>X7S_Event_Materials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>