objects/X7S_Event_Material__c/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <label>Link/URL</label>
    <type>Url</type>
</CustomField>