objects/X7S_Event_Material__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Link/URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>