objects/X7S_Event_Material__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Event</fullName>
            </value>
            <value>
                <fullName>Post-Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>